--- a/pinax/templates/default/base.html
+++ b/pinax/templates/default/base.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="{{ STATIC_URL }}pinax/css/facebox.css" />
         <link rel="stylesheet" href="{{ STATIC_URL }}pinax/css/announcements.css" />
         <link rel="stylesheet" href="{{ STATIC_URL }}pinax/css/accounts.css" />
+        <link rel="stylesheet" href="{{ STATIC_URL }}pinax/css/ui-lightness/jquery-ui-1.8.9.custom.css" />
         <link rel="stylesheet" href="{{ STATIC_URL }}uni_form/uni-form.css" />
         {% if LANGUAGE_BIDI %}
         <style type="text/css" media="screen">
@@ -71,6 +72,7 @@
         <div id="footer">{% block footer %}{% endblock %}</div>
         
         <script src="{% block jquery_src %}{{ STATIC_URL }}pinax/js/jquery-1.3.2.min.js{% endblock %}" type="text/javascript"></script>
+        <script src="{% block jquery_ui_src %}{{ STATIC_URL }}pinax/js/jquery-ui-1.8.9.custom.min.js{% endblock %}" type="text/javascript"></script>
         <script src="{{ STATIC_URL }}pinax/js/base.js" type="text/javascript"></script>
         <script src="{{ STATIC_URL }}uni_form/uni-form.jquery.js" type="text/javascript"></script>
         {% include "facebox_js.html" %}
