--- a/pinax/templates/default/tasks/task_list.html
+++ b/pinax/templates/default/tasks/task_list.html
@@ -3,6 +3,7 @@
 {% load i18n %}
 {% load account_tags %}
 {% load shorttimesince_tag %}
+{% load shorttimeuntil_tag %}
 {% load order_by %}
 {% load humanize %}
 {% load tasks_tags %}
@@ -30,6 +31,8 @@
             
     <p>Group by:
         {% ifequal group_by "state" %}
+            <a href="?{% if gbqs %}{{ gbqs }}&{% endif %}group_by=due">due</a>
+            or
             <a href="?{% if gbqs %}{{ gbqs }}&{% endif %}group_by=modified">last modified</a>
             or
             <b>state</b>
@@ -42,6 +45,8 @@
             {% regroup tasks by get_state_display as grouped_tasks %}
         {% else %}
             {% ifequal group_by "assignee" %}
+                <a href="?{% if gbqs %}{{ gbqs }}&{% endif %}group_by=due">due</a>
+                or
                 <a href="?{% if gbqs %}{{ gbqs }}&{% endif %}group_by=modified">last modified</a>
                 or
                 <a href="?{% if gbqs %}{{ gbqs }}&{% endif %}group_by=state">state</a>
@@ -54,6 +59,8 @@
                 {% regroup tasks by assignee as grouped_tasks %}
             {% else %}
                 {% ifequal group_by "tag" %}
+                    <a href="?{% if gbqs %}{{ gbqs }}&{% endif %}group_by=due">due</a>
+                    or
                     <a href="?{% if gbqs %}{{ gbqs }}&{% endif %}group_by=modified">last modified</a>
                     or
                     <a href="?{% if gbqs %}{{ gbqs }}&{% endif %}group_by=state">state</a>
@@ -63,16 +70,33 @@
                     <b>tag</b>
                     {# do no manipulation here as we'll special case below #}
                 {% else %}
-                    <b>last modified</b>
-                    or
-                    <a href="?{% if gbqs %}{{ gbqs }}&{% endif %}group_by=state">state</a>
-                    or
-                    <a href="?{% if gbqs %}{{ gbqs }}&{% endif %}group_by=assignee">assignee</a>
-                    or
-                    <a href="?{% if gbqs %}{{ gbqs }}&{% endif %}group_by=tag">tag</a>
-                    
-                    {% order tasks by -modified %}
-                    {% regroup tasks by modified.date as grouped_tasks %}
+                    {% ifequal group_by "modified" %}
+                        <a href="?{% if gbqs %}{{ gbqs }}&{% endif %}group_by=due">due</a>
+                        or
+                        <b>last modified</b>
+                        or
+                        <a href="?{% if gbqs %}{{ gbqs }}&{% endif %}group_by=state">state</a>
+                        or
+                        <a href="?{% if gbqs %}{{ gbqs }}&{% endif %}group_by=assignee">assignee</a>
+                        or
+                        <a href="?{% if gbqs %}{{ gbqs }}&{% endif %}group_by=tag">tag</a>
+                        
+                        {% order tasks by -modified %}
+                        {% regroup tasks by modified.date as grouped_tasks %}
+                    {% else %}
+                        <b>due</b>
+                        or
+                        <a href="?{% if gbqs %}{{ gbqs }}&{% endif %}group_by=modified">last modified</a>
+                        or
+                        <a href="?{% if gbqs %}{{ gbqs }}&{% endif %}group_by=state">state</a>
+                        or
+                        <a href="?{% if gbqs %}{{ gbqs }}&{% endif %}group_by=assignee">assignee</a>
+                        or
+                        <a href="?{% if gbqs %}{{ gbqs }}&{% endif %}group_by=tag">tag</a>
+                        
+                        {% order tasks by -due %}
+                        {% regroup tasks by due.date as grouped_tasks %}
+                    {% endifequal %}
                 {% endifequal %}
             {% endifequal %}
         {% endifequal %}
@@ -85,6 +109,7 @@
             <th>Summary</th>
             <th>Last Modified</th>
             <th>Assignee</th>
+            <th>Due</th>
             <th>Tags</th>
             <th>Status</th>
         </tr>
@@ -94,7 +119,7 @@
                 {% tasks_for_tag section as tagtasks in tasks %}
                 {% if tagtasks %}
                     <tbody><tr class="task_grouping">
-                        <td colspan="6">
+                        <td colspan="7">
                             <span class="focus"><a href="{% focus_url group_by section group %}">focus</a></span>
                             <span class="toggle">
                                 <span class="arrow">&#x25BE;</span>
@@ -116,6 +141,7 @@
                                         <span class="warning">unassigned</span>
                                     {% endif %}
                                 </td>
+                                <td>in {{ item.due|shorttimeuntil }}</td>
                                 <td>{% task_tags item group %}</td>
                                 <td>{{ item.status }}</td>
                             </tr>
@@ -126,7 +152,7 @@
         {% else %}
             {% for section in grouped_tasks %}
                 <tbody><tr class="task_grouping">
-                    <td colspan="6">
+                    <td colspan="7">
                         <span class="focus"><a href="{% focus_url group_by section.grouper group %}">focus</a></span>
                         <span class="toggle">
                             <span class="arrow">&#x25BE;</span>
@@ -155,6 +181,17 @@
                                     
                                 {% else %}
                                     <span class="warning">unassigned</span>
+                                {% endif %}
+                            </td>
+                            <td>
+                                {% if task.overdue %}
+                                    <span class="warning">{{ task.due|shorttimesince }} ago</span>
+                                {% else %}
+                                    {% if task.almostdue %}
+                                        <span class="warning">in {{ task.due|shorttimeuntil }}</span>
+                                    {% else %}
+                                        {{ task.due|shorttimeuntil }}
+                                    {% endif %}
                                 {% endif %}
                             </td>
                             <td>{% task_tags task group %}</td>
