--- a/pinax/templates/default/projects/content_base.html
+++ b/pinax/templates/default/projects/content_base.html
@@ -9,6 +9,7 @@
             <li><a href="{% groupurl topic_list group %}">Topics</a></li>
             <li><a href="{% groupurl wakawaka_page_list group %}">Wiki</a></li>
             <li><a href="{% groupurl task_list group %}">Tasks</a></li>
+            <li><a href="{% groupurl time_track_overview group %}">Time</a></li>
         </ul>
     </div>
     <div class="clearfix" style="background: #F0F7FF;">
